feat: update image paths, fix meta description

--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
     <title>CannaSpecific - End Strain Roulette with Cannabis Science</title>
-    <meta name="description" content="Join CannaSpecific's mission to connect cannabis lab data (COAs) with real patient experiences. Help us build the future where everyone can find precise, predictable, and effective cannabis products." />
+    <!-- Updated meta description to include Delta 8 and THCA -->
+    <meta name="description" content="Join CannaSpecific's mission to connect lab data (COAs) for all cannabis products, including Delta 8 & THCA, with real patient experiences. Help us build the future of precise, data-driven wellness." />
     <meta property="og:title" content="CannaSpecific - Unlock the True Science of Cannabis" />
     <meta property="og:description" content="Tired of the guessing game? We're ending 'Strain Roulette' by connecting lab reports to real user experiences. Join the movement to bring data transparency to cannabis." />
     <meta property="og:type" content="website" />
